--- a/webapi/appsettings.json
+++ b/webapi/appsettings.json
@@ -191,7 +191,7 @@
       ],
       // Vectors can be written to multiple storages, e.g. for data migration, A/B testing, etc.
       "MemoryDbTypes": [
-        "SimpleVectorDb"
+        "AzureAISearch"
       ],
       // ImageOcrType is the image OCR configuration: "None", "AzureFormRecognizer" or "Tesseract"
       "ImageOcrType": "None"
@@ -202,7 +202,7 @@
     // - EmbeddingGeneratorType: Embedding generator configuration: "AzureOpenAIEmbedding", "AzureOpenAI" or "OpenAI"
     //
     "Retrieval": {
-      "MemoryDbType": "SimpleVectorDb",
+      "MemoryDbType": "AzureAISearch",
       "EmbeddingGeneratorType": "AzureOpenAIEmbedding"
     },
     //
@@ -308,7 +308,7 @@
         "Auth": "ApiKey",
         // "APIKey": "", // dotnet user-secrets set "KernelMemory:Services:AzureOpenAIText:APIKey" "MY_AZUREOPENAI_KEY"
         "Endpoint": "",
-        "Deployment": "gpt-35-turbo",
+        "Deployment": "GPT4",
         "APIType": "ChatCompletion",
         "MaxRetries": 10
       },
@@ -334,7 +334,7 @@
       // - MaxRetries is the maximum number of retries for a failed request.
       //
       "OpenAI": {
-        "TextModel": "gpt-3.5-turbo",
+        "TextModel": "GPT4",
         "EmbeddingModel": "text-embedding-ada-002",
         //"APIKey": "", // dotnet user-secrets set "KernelMemory:Services:OpenAI:APIKey" "MY_OPENAI_KEY"
         "OrgId": "",
