--- a/.github/workflows/copilot-deploy-pipeline.yml
+++ b/.github/workflows/copilot-deploy-pipeline.yml
@@ -32,15 +32,15 @@ jobs:
       MEMORYPIPELINE_ARTIFACT_NAME: ${{needs.build-memorypipeline.outputs.artifact}}
       PLUGINS_ARTIFACT_NAME: ${{needs.build-plugins.outputs.artifact}}
 
-  int-tests:
-    uses: ./.github/workflows/copilot-run-integration-tests.yml
-    needs: int
-    with:
-      BACKEND_HOST: ${{needs.int.outputs.backend-host}}
-      ENVIRONMENT: int
+  # int-tests:
+  #   uses: ./.github/workflows/copilot-run-integration-tests.yml
+  #   needs: int
+  #   with:
+  #     BACKEND_HOST: ${{needs.int.outputs.backend-host}}
+  #     ENVIRONMENT: int
 
   stable:
-    needs: [int-tests, build-webapi, build-memorypipeline, build-plugins]
+    needs: [int, build-webapi, build-memorypipeline, build-plugins]
     uses: ./.github/workflows/copilot-deploy-environment.yml
     with:
       ENVIRONMENT: stable
