--- a/.github/workflows/feature-build-and-deploy-backend.yml
+++ b/.github/workflows/feature-build-and-deploy-backend.yml
@@ -39,9 +39,8 @@ jobs:
         with:
           azcliversion: 2.30.0
           inlineScript: |
-            $deployments = az deployment group list --resource-group ${{vars.CC_DEPLOYMENT_GROUP_NAME}} --query "[?properties.provisioningState == 'Succeeded'].{name: name, timestamp: properties.timestamp}" --output json | ConvertFrom-Json
-            $mostRecentDeployment = $deployments | Sort-Object timestamp -Descending | Select-Object -First 1
-            echo "::set-output name=output_value::$(mostRecentDeployment.name)"
+            DEPLOYMENT_NAME=$(az deployment group list --resource-group ${{vars.CC_DEPLOYMENT_GROUP_NAME}} --query "[?provisioningState=='Succeeded' && starts_with(name, 'int')].{name:name, timestamp:properties.timestamp}" --output tsv | sort -k2r | head -n 1 | cut -f1)
+            echo "::set-output name=output_value::$DEPLOYMENT_NAME"
 
   int:
     needs: [build-webapi, get-last-deployment]
