--- a/.github/workflows/feature-build-and-deploy-backend.yml
+++ b/.github/workflows/feature-build-and-deploy-backend.yml
@@ -24,7 +24,7 @@ jobs:
     environment: int
     runs-on: ubuntu-latest
     outputs:
-      deploymentName: ${{steps.get-last-successful-deployment.outputs.output_value}}
+      deploymentName: ${{steps.get-last-successful-deployment.outputs.deploymentName}}
     steps:
       - name: Azure login
         uses: azure/login@v2
@@ -40,7 +40,8 @@ jobs:
           azcliversion: 2.30.0
           inlineScript: |
             DEPLOYMENT_NAME=$(az deployment group list --resource-group ${{vars.CC_DEPLOYMENT_GROUP_NAME}} --query "[?provisioningState=='Succeeded' && starts_with(name, 'int')].{name:name, timestamp:properties.timestamp}" --output tsv | sort -k2r | head -n 1 | cut -f1)
-            echo "output_value=$DEPLOYMENT_NAME" >> $GITHUB_OUTPUT
+            echo "$DEPLOYMENT_NAME"
+            echo "deploymentName=$DEPLOYMENT_NAME" >> $GITHUB_OUTPUT
 
   int:
     needs: [build-webapi, get-last-deployment]
