--- a/.github/workflows/copilot-deploy-pipeline.yml
+++ b/.github/workflows/copilot-deploy-pipeline.yml
@@ -31,6 +31,7 @@ jobs:
       WEBAPI_ARTIFACT_NAME: ${{needs.build-webapi.outputs.artifact}}
       MEMORYPIPELINE_ARTIFACT_NAME: ${{needs.build-memorypipeline.outputs.artifact}}
       PLUGINS_ARTIFACT_NAME: ${{needs.build-plugins.outputs.artifact}}
+    secrets: inherit
 
   # int-tests:
   #   uses: ./.github/workflows/copilot-run-integration-tests.yml
@@ -47,3 +48,4 @@ jobs:
       WEBAPI_ARTIFACT_NAME: ${{needs.build-webapi.outputs.artifact}}
       MEMORYPIPELINE_ARTIFACT_NAME: ${{needs.build-memorypipeline.outputs.artifact}}
       PLUGINS_ARTIFACT_NAME: ${{needs.build-plugins.outputs.artifact}}
+    secrets: inherit
