--- a/.github/workflows/copilot-deploy-environment.yml
+++ b/.github/workflows/copilot-deploy-environment.yml
@@ -29,6 +29,7 @@ jobs:
     uses: ./.github/workflows/copilot-deploy-infra.yml
     with:
       ENVIRONMENT: ${{inputs.ENVIRONMENT}}
+    secrets: inherit
 
   deploy-backend:
     needs: [deploy-infra]
