--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,8 @@
 				"esbenp.prettier-vscode",
 				"oderwat.indent-rainbow",
 				"github.vscode-github-actions",
-				"ms-azuretools.vscode-bicep"
+				"ms-azuretools.vscode-bicep",
+				"GitHub.copilot"
 			]
 		}
 	},
